feat:paypal payout to worker

--- a/API/src/email/templates/worker-order-completion.hbs
+++ b/API/src/email/templates/worker-order-completion.hbs
@@ -12,6 +12,7 @@
     <!-- Greeting -->
     <p>Dear {{workerName}},</p>
     <p>We're thrilled to announce that you have successfully completed the following job:</p>
+    <p>We're thrilled to announce that you have successfully completed the following job:</p>
     <!-- Job ID and Details -->
     <div style='background-color: #f9f9f9; padding: 15px; margin-bottom: 20px;'>
       <h3 style='color: #4FB8B3;'>Completed Job Details</h3>
@@ -23,6 +24,8 @@
       <p><strong>Date Ordered:</strong> {{orderedDate}}</p>
       <p><strong>Customer:</strong> {{customerName}}</p>
     </div>
+
+    <p>Your Payment is on the way to Your Paypal Account</p>
     <!-- Congratulations -->
     <div style='background-color: #e8f5e9; padding: 15px; margin-bottom: 20px;'>
       <h3 style='color: #4caf50;'>Congratulations on a job well done!</h3>
