--- a/API/src/email/templates/worker-order-completion.hbs
+++ b/API/src/email/templates/worker-order-completion.hbs
@@ -25,7 +25,7 @@
       <p><strong>Customer:</strong> {{customerName}}</p>
     </div>
 
-    <p>Your Payment is on the way to Your Paypal Account</p>
+    <p>Your payment is on the way to your PayPal account!</p>
     <!-- Congratulations -->
     <div style='background-color: #e8f5e9; padding: 15px; margin-bottom: 20px;'>
       <h3 style='color: #4caf50;'>Congratulations on a job well done!</h3>
